Fix small bugs listed below. -Photos URL to set profile picture -Preview Mode style extends page -Key Requests suggested friends table extends if there are no key requests -portrait is not stretched anymore -extend request key button width -make sure bookmarks view closes. (lingering App.vent events issue)

--- a/app/assets/stylesheets/rooms_profile_requests.css.scss
+++ b/app/assets/stylesheets/rooms_profile_requests.css.scss
@@ -85,7 +85,8 @@ p.profile_friend_username{
 
 }
 .profile_home_img_wrap .profile_request_key_button{
-  width:108px;
+  width: 120px;
+  margin-top: 5px;
 }
 .profile_friends_suggestion_single .profile_request_key_button, .profile_request_buttons .profile_key_requested{
   width:158px;
@@ -108,7 +109,7 @@ p.profile_friend_username{
 
 .profile_friends_view{
   background-color: white;
-  height:500px;
+  height:585px;
   width: 620px;
   overflow-y:scroll;
 
